--- a/webar-demo.html
+++ b/webar-demo.html
@@ -1,3 +1,4 @@
+<html>
 <head>
 <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
@@ -17,3 +18,4 @@
 </a-marker>
 </a-scene>
 </body>
+</html>
